Implemented more of Vicky's suggestions

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -300,18 +300,24 @@ archivePrefix = {arXiv},
 }
 
 
-
-
 @Article{Belczynski:2002,
-     author    = {{Belczynski}, K. and {Kalogera}, V. and {Bulik}, T.},
-     title     = "A Comprehensive Study of Binary Compact Objects as
-                  Gravitational Wave Sources: Evolutionary Channels, Rates, and
-                  Physical Properties",
-     journal   = {\apj},
-     volume    = 572,
-     year      = 2002,
-     pages     = 407
+       author = {{Belczynski}, Krzysztof and {Kalogera}, Vassiliki and {Bulik}, Tomasz},
+        title = "{A Comprehensive Study of Binary Compact Objects as Gravitational Wave Sources: Evolutionary Channels, Rates, and Physical Properties}",
+      journal = {\apj},
+     keywords = {Stars: Binaries: Close, Black Hole Physics, Gravitational Waves, Stars: Evolution, Stars: Neutron, Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2002,
+        month = jun,
+       volume = {572},
+       number = {1},
+        pages = {407-431},
+          doi = {10.1086/340304},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0111452},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...572..407B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{Belczynski:2008,
    author = {{Belczynski}, K. and {Kalogera}, V. and {Rasio}, F.~A. and {Taam}, R.~E. and 
@@ -31128,5 +31134,69 @@ archivePrefix = {arXiv},
        eprint = {2105.06491},
  primaryClass = {astro-ph.HE},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...914L..30F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Srinivasan:1982,
+       author = {{Srinivasan}, G. and {van den Heuvel}, E.~P.~J.},
+        title = "{Some constraints on the evolutionary history of the binary pulsar PSR1913+16.}",
+      journal = {\aap},
+     keywords = {Binary Stars, Neutron Stars, Pulsars, Stellar Evolution, X Ray Sources, Angular Momentum, Roche Limit, Stellar Magnetic Fields, Stellar Mass Accretion, Astrophysics},
+         year = 1982,
+        month = apr,
+       volume = {108},
+        pages = {143-147},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1982A&A...108..143S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fabbiano:2006,
+       author = {{Fabbiano}, G.},
+        title = "{Populations of X-Ray Sources in Galaxies}",
+      journal = {\araa},
+     keywords = {Astrophysics},
+         year = 2006,
+        month = sep,
+       volume = {44},
+       number = {1},
+        pages = {323-366},
+          doi = {10.1146/annurev.astro.44.051905.092519},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0511481},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006ARA&A..44..323F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{LivioSoker:1988,
+       author = {{Livio}, Mario and {Soker}, Noam},
+        title = "{The Common Envelope Phase in the Evolution of Binary Stars}",
+      journal = {\apj},
+     keywords = {Binary Stars, Stellar Envelopes, Stellar Evolution, Stellar Physics, Computational Astrophysics, Planetary Nebulae, Stellar Cores, Stellar Mass Ejection, White Dwarf Stars, Astrophysics, STARS: BINARIES, STARS: EVOLUTION},
+         year = 1988,
+        month = jun,
+       volume = {329},
+        pages = {764},
+          doi = {10.1086/166419},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1988ApJ...329..764L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{GerosaBerti:2017,
+       author = {{Gerosa}, Davide and {Berti}, Emanuele},
+        title = "{Are merging black holes born from stellar collapse or previous mergers?}",
+      journal = {\prd},
+     keywords = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2017,
+        month = jun,
+       volume = {95},
+       number = {12},
+          eid = {124046},
+        pages = {124046},
+          doi = {10.1103/PhysRevD.95.124046},
+archivePrefix = {arXiv},
+       eprint = {1703.06223},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017PhRvD..95l4046G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
