--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -193,7 +193,7 @@ A wide variety of electromagnetic observations inform our understanding of the e
 \item Galactic binary radio pulsars \citep[e.g.,][]{Tauris:2017};
 \item short gamma-ray bursts \citep[e.g.,][]{Berger:2014};
 \item supernovae and long gamma-ray bursts \citep[e.g.,][]{Cantiello:2007,Szecsi:2017,Bavera:2021};
-\item X-ray binaries \citep[e.g.,][]{TaurisvdH:2006};
+\item X-ray binaries \citep[e.g.,][]{TaurisvdH:2006,Fabbiano:2006};
 \item black holes in detached binaries \citep[e.g.,][]{Thompson:2019} and microlensing observations \citep[e.g.,][]{WyrzykowskiMandel:2019}.
 \end{itemize}
 We first focus on X-ray binaries, the type of binary system with the closest connection to merging binary black holes, although only a small minority of black-hole X-ray binaries will ultimately evolve into merging black holes \citep[e.g.,][]{CygnusX3:2012,Neijssel:2020CygX1}. We then discuss detached black-hole binaries, black-hole microlensing observations, and selection effects.
@@ -205,11 +205,12 @@ Black-hole X-ray binaries consist of a star transferring mass onto a black-hole 
 \textbf{Black-Hole Masses:} 
 Until recently, black-hole X-ray binaries with dynamical mass measurements provided the only secure measurements of black-hole masses other than the gravitational-wave observations described above, though this is now changing thanks to observations of detached binaries and microlensing data (see section \ref{sec:lensing}).  \citet{Ozel:2010} and \citet{Farr:2011} summarise the mass distribution of black-hole X-ray binaries.  They find a distribution which ranges from $> 20\, M_\odot$ for the heaviest high-mass X-ray binaries to 4 or 5 solar masses for the lightest low-mass X-ray binaries, with a possible mass gap between neutron-star and black-hole masses, though see \cite{Kreidberg:2012} for possible biases in mass measurements of some low-mass X-ray binaries and section \ref{sec:lensing} for evolutionary selection effects.  The uncertainty regarding the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015} mean that the most massive confirmed stellar-mass black hole is Cygnus X-1, with a dynamical mass measurement of $21 \pm 2\, M_\odot$ \citep{MillerJones:2021}.   The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting evidence for intermediate-mass black holes \citep{MillerColbert:2004,Greene:2019,Paynter:2021}; if few-hundred solar-mass black holes generically exist in globular clusters, they will substitute into merging binaries and ultimately be observable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008,IMBBH:O1}.
 
-\textbf{Black-Hole Spin Magnitudes:} Black-hole X-ray binaries also provide an opportunity for measuring black-hole spins \citep[see][for recent reviews]{MillerMiller:2015,Reynolds:2020}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black-hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics \citep[e.g.,][]{Basak:2017,Kawano:2017}.  Interestingly, all high-mass X-ray binaries with available spin measurements show evidence of rapid dimensionless spins in excess of $\gtrsim 0.85$, where 1 is the spin magnitude of a maximally spinning black hole \citep{Reynolds:2020}.
+\textbf{Black-Hole Spin Magnitudes:} Black-hole X-ray binaries also provide an opportunity for measuring black-hole spins \citep[see][for recent reviews]{MillerMiller:2015,Reynolds:2020}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black-hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics \citep[e.g.,][]{Basak:2017,Kawano:2017}.  
 
 \textbf{Black-Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for subsequent realignment during binary evolution, as described below.
 
-\textbf{Inconsistency with Spin Observations from Gravitational-wave Sources?} The rapidly spinning black holes include all three in high-mass X-ray binaries with accurate mass measurements: Cygnus X-1, LMC X-1 and M33 X-7.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution (though \citet{HiraiMandel:2021} argue that only binaries with optical companions that are close to Roche-lobe overflow may be X-ray bright).  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, then the observed high-mass X-ray binaries and merging binary black holes should predominantly sample different evolutionary histories (see section \ref{BHspins}).
+\textbf{Inconsistency with Spin Observations from Gravitational-wave Sources?} 
+All three high-mass X-ray binaries with available spin measurements -- Cygnus X-1, LMC X-1 and M33 X-7 -- show evidence of rapid dimensionless spins in excess of $\gtrsim 0.85$, where 1 is the spin magnitude of a maximally spinning black hole \citep{Reynolds:2020}.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution (though \citet{HiraiMandel:2021} argue that only binaries with optical companions that are close to Roche-lobe overflow may be X-ray bright).  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, then the observed high-mass X-ray binaries and merging binary black holes should predominantly sample different evolutionary histories (see section \ref{BHspins}).
 
 \subsubsection{Other electromagnetic black hole mass measurements} \label{sec:lensing}
 
@@ -262,7 +263,7 @@ We explore these four formation scenarios in more detail below. We will not disc
 
 The first channel we describe is perhaps the most studied one, placing merging black-hole binaries in the same framework as other very close binaries (such as cataclysmic variables) in which at least one of the stars has extended beyond the binary's current orbital separation during an earlier stage of its evolution \citep[e.g.,][]{Paczynski:1976}. 
 
-In this scenario the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment in its evolution, the binary is tightened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase; see \citet{Ivanova:2013} for a review. The resulting tight binary may then be close enough to merge through gravitational-wave emission.  \citet{SmarrBlandford:1976} may have been the first to explicitly point to this channel in the context of compact object binary formation when analysing the evolutionary history of the Hulse--Taylor binary pulsar. The channel has been studied at length over the past 40 years, with significant contributions from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,Nelemans:2001,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Belczynski:2016,EldridgeStanway:2016} and many others. Rather than summarising all of the steps and challenges in our understanding of massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we provide a schematic outline of an evolutionary scenario that leads to the formation of a GW150914-like merging system.
+In this scenario the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment in its evolution, the binary is tightened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase \citep{LivioSoker:1988,Ivanova:2013}. The resulting tight binary may then be close enough to merge through gravitational-wave emission.  \citet{SmarrBlandford:1976} may have been the first to explicitly point to this channel in the context of compact object binary formation when analysing the evolutionary history of the Hulse--Taylor binary pulsar. The channel has been studied at length over the past 40 years, with significant contributions from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,Nelemans:2001,Belczynski:2002,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Mennekens:2014,Belczynski:2016,EldridgeStanway:2016} and many others. Rather than summarising all of the steps and challenges in our understanding of massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we provide a schematic outline of an evolutionary scenario that leads to the formation of a GW150914-like merging system.
 
 \begin{figure}
 	\centering
@@ -282,7 +283,7 @@ An example of the evolution of this system is sketched out in a van den Heuvel -
 \item[h.] Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black-hole binary is formed.  While this entire process takes only a few million years from the formation of a stellar binary to the formation of a binary black hole, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
 \end{enumerate}
 
-Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables (massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss \citep{Mennekens:2014})  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer \citep{KippenhahnMeyerHofmeister:1977} and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \citep[e.g.,][]{Kruckow:2016,Klencki:2020convective,Fragos:2019,LawSmith:2020,Lau:2021}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Fryer:2012,Repetto:2012,Mandel:2015kicks,Mueller:2020}; the possibility of double-core common envelopes when unstable mass transfer is initiated between two evolved stars \citep{BetheBrown:1998,Dewi:2006}; and the amount of mass that can be accreted onto a black hole \citep{Eldridge:2017,Bavera:2020,vanSon:2020}.  Moreover, some isolated binaries could form merging binary black holes entirely through dynamically stable mass transfer, with sufficient binary hardening achieved by non-conservative mass transfer onto a lower-mass compact donor rather than a common-envelope event \citep{vandenHeuvel:2017,Pavlovskii:2017,Neijssel:2018,vanSon:2021}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
+Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables (massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss \citep{Mennekens:2014})  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer \citep{KippenhahnMeyerHofmeister:1977} and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \citep[e.g.,][]{Kruckow:2016,Klencki:2020convective,Fragos:2019,LawSmith:2020,Lau:2021}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Fryer:2012,Repetto:2012,Mandel:2015kicks,Mueller:2020}; the possibility of double-core common envelopes when unstable mass transfer is initiated between two evolved stars \citep{BetheBrown:1998,Belczynski:2002,Dewi:2006}; and the amount of mass that can be accreted onto a black hole \citep{Eldridge:2017,Bavera:2020,vanSon:2020}.  Moreover, some isolated binaries could form merging binary black holes entirely through dynamically stable mass transfer, with sufficient binary hardening achieved by non-conservative mass transfer onto a lower-mass compact donor rather than a common-envelope event \citep{vandenHeuvel:2017,Pavlovskii:2017,Neijssel:2018,vanSon:2021}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
 \subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}\label{form:CHE}
 
@@ -422,9 +423,7 @@ Dynamically formed binaries may also favour comparable masses because the heavie
 Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016} and \citet{Riley:2020} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in section \ref{form:CHE}. 
 
 \subsubsection{Black-hole spin magnitudes and directions}\label{BHspins}
-The spins of merging black holes may carry imprints of their evolutionary history. 
-
-Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011,Tauris:2017}.  Meanwhile, the spin directions for dynamically formed binaries are likely to be distributed isotropically \citep[e.g.,][]{Rodriguez:2016spin}.  On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018,RodriguezAntonini:2018}.
+The spins of merging black holes may carry imprints of their evolutionary history \citep[e.g.,][]{GerosaBerti:2017}.  Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Kalogera:2000,Farr:2011,Tauris:2017}.  Meanwhile, the spin directions for dynamically formed binaries are likely to be distributed isotropically \citep[e.g.,][]{Rodriguez:2016spin}.  On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018,RodriguezAntonini:2018}.
 
 Spin magnitudes may also depend sensitively on evolutionary history.  A massive star may contain a large amount of angular momentum, far in excess of the maximum allowed for a spinning black hole. However, the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore readily be lost through winds or via envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017}, or, less likely, during the supernova itself \citep{Batta:2017,Schroeder:2018}.   Consequently, if angular momentum transport within a star is at least moderately efficient, we may expect that the first-formed black hole in an isolated binary will always be slowly spinning, while the second-born black hole will be rapidly spinning only in the tightest binaries, when its helium star progenitor can be spun up through tides \citep{Bavera:2019,Belczynski:2020,MandelFragos:2020,Bavera:2021,OlejakBelczynski:2021}.
 
@@ -463,7 +462,7 @@ Three years ago, in an earlier version of this review, we suggested that two of 
 
 Other individually exciting events could include the first confirmed discovery of an intermediate-mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{AmaroSeoaneSantamaria:2009,Veitch:2015,Graff:2015} or as an intermediate-mass-ratio inspiral of a stellar-mass compact object into such a black hole \citep[e.g.,][]{Mandel:2008,Haster:2015IMRI,Haster:2016}. 
 
-A source with a detectable eccentricity would clearly signal a dynamical capture \citep{Breivik:2016}. 
+A source with a detectable eccentricity would clearly signal a dynamical capture \citep[e.g.,][]{Zevin:2017,Rodriguez:2018}. 
 
 A measurement of an effective spin value close to either 1 or $-1$ in a binary with nearly equal-mass components would point to rapid spins of both black holes. A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate an unexpected anti-alignment between rapid spins and the binary's orbital angular momentum, perhaps through either a supernova spin tilt or dynamical formation.  
 
@@ -519,12 +518,6 @@ AF is grateful for the astro-tourism.
 
 \end{document}
 
-Vicky: refs on p. 4 (list of other observables), 5 (XRBs and their discussion),  bottom of 6, 8, bottom of 9, top of 10, 16, 17, 18, check 19, 
 
-isolated channel: Srinivasan 1989? BBHs: Braginsky & Thorne (check Levin's FB)?
-
-AGN disks -- see Bence
-
-\citet{FishbachKalogera:2021}
 
 
