--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -251,7 +251,7 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 \textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers should not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} predicted that binary compact objects must naturally (albeit rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high-mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe \citep[for early explanations of its formation in the context of binary evolution, see][]{FlanneryvdH:1975,DeLoore:1975}.
 
-The proposed formation scenarios for merging compact-object binaries generally fall into two broad categories: the evolution of isolated binaries composed of two massive stars and binaries which form or merge with the assistance of gravitational dynamical interactions.  Below, we discuss four examples of these scenarios: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; (iii) assembly of a close binary from black holes that formed from stars not born in the same binary; and (iv) stellar and binary evolution and dynamics operating jointly in triple systems.   Contrived as these scenarios sound, all four might plausibly contribute to the production of binary black hole mergers.  And as we'll see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black-hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
+The proposed formation scenarios for merging compact-object binaries generally fall into two broad categories: the evolution of isolated binaries composed of two massive stars and binaries which form or merge with the assistance of gravitational dynamical interactions.  Below, we discuss four examples of these scenarios: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; (iii) assembly of a close binary from black holes that formed from stars not born in the same binary; and (iv) stellar and binary evolution and dynamics operating jointly in triple systems.   Contrived as these scenarios sound, all four might plausibly contribute to the production of binary black hole mergers.  And as we will see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black-hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
 
 We explore these four formation scenarios in more detail below. We will not discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} (\citet{Woosley:2016} and \citet{Dai:2017} discuss the problems with this picture).  
 
@@ -441,7 +441,7 @@ The evolutionary history of merging black holes also depends on their formation 
 
 Black-hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the amount of ejecta during the supernova. Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core --- the convective region in the centre of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron --- determines the ultimate black-hole mass.  If left unperturbed, a third to a half of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black-hole remnant.
 
-The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot$ drives significant winds, which can remove a large amount of material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity  --- the fraction $Z$ of the star's mass contained in elements heavier than hydrogen and helium --- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001,Sander:2020}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017,Vink:2017}, simulations suggest that at the 2\% metallicity of our solar neighbourhood, massive stars lose enough mass via winds that maximum black-hole masses are only around 15--20 $M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the possible dependence of compact remnant mass on metallicity. 
+The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot$ drives significant winds, which can remove a large amount of material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity  --- the fraction $Z$ of the star's mass contained in elements heavier than hydrogen and helium --- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001,Sander:2020}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017,Vink:2017}, simulations suggest that at the metallicity of our solar neighbourhood, massive stars lose enough mass via winds that maximum black-hole masses are only around 15--20 $M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the possible dependence of compact remnant mass on metallicity. 
  
 \begin{figure}
 	\centering
