--- a/Mandel.bib
+++ b/Mandel.bib
@@ -31200,3 +31200,130 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2017PhRvD..95l4046G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{PalmeseConselice:2021,
+       author = {{Palmese}, Antonella and {Conselice}, Christopher J.},
+        title = "{GW190521 from the Merger of Ultradwarf Galaxies}",
+      journal = {\prl},
+     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2021,
+        month = may,
+       volume = {126},
+       number = {18},
+          eid = {181103},
+        pages = {181103},
+          doi = {10.1103/PhysRevLett.126.181103},
+archivePrefix = {arXiv},
+       eprint = {2009.10688},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021PhRvL.126r1103P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Sakstein:2020,
+       author = {{Sakstein}, Jeremy and {Croon}, Djuna and {McDermott}, Samuel D. and {Straight}, Maria C. and {Baxter}, Eric J.},
+        title = "{Beyond the Standard Model Explanations of GW190521}",
+      journal = {\prl},
+     keywords = {General Relativity and Quantum Cosmology, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2020,
+        month = dec,
+       volume = {125},
+       number = {26},
+          eid = {261105},
+        pages = {261105},
+          doi = {10.1103/PhysRevLett.125.261105},
+archivePrefix = {arXiv},
+       eprint = {2009.01213},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020PhRvL.125z1105S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Croker:2021,
+       author = {{Croker}, Kevin S. and {Zevin}, Michael and {Farrah}, Duncan and {Nishimura}, Kurtis A. and {Tarl{\'e}}, Gregory},
+        title = "{Cosmologically Coupled Compact Objects: A Single-parameter Model for LIGO-Virgo Mass and Redshift Distributions}",
+      journal = {\apjl},
+     keywords = {Astrophysical black holes, Supernova remnants, Compact objects, Cosmological evolution, Gravitational wave astronomy, 98, 1667, 288, 336, 675, General Relativity and Quantum Cosmology, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2021,
+        month = nov,
+       volume = {921},
+       number = {2},
+          eid = {L22},
+        pages = {L22},
+          doi = {10.3847/2041-8213/ac2fad},
+archivePrefix = {arXiv},
+       eprint = {2109.08146},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...921L..22C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Vink:2011,
+       author = {{Vink}, Jorick S.},
+        title = "{The theory of stellar winds}",
+      journal = {\apss},
+     keywords = {Mass loss, Massive stars, Metallicity, Supernovae, Luminous blue variables, Gamma-ray bursts, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2011,
+        month = nov,
+       volume = {336},
+       number = {1},
+        pages = {163-167},
+          doi = {10.1007/s10509-011-0636-7},
+archivePrefix = {arXiv},
+       eprint = {1112.0952},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011Ap&SS.336..163V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{HillsFullerton:1980,
+       author = {{Hills}, J.~G. and {Fullerton}, L.~W.},
+        title = "{Computer simulations of close encounters between single stars and hard binaries}",
+      journal = {\aj},
+     keywords = {Binary Stars, Celestial Mechanics, Computerized Simulation, Star Clusters, Stellar Motions, Energy Transfer, Globular Clusters, Mass Distribution, Star Distribution, Stellar Mass, Astronomy},
+         year = 1980,
+        month = sep,
+       volume = {85},
+        pages = {1281-1291},
+          doi = {10.1086/112798},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1980AJ.....85.1281H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Mapelli:2009,
+       author = {{Mapelli}, M. and {Colpi}, M. and {Zampieri}, L.},
+        title = "{Low metallicity and ultra-luminous X-ray sources in the Cartwheel galaxy}",
+      journal = {\mnras},
+     keywords = {black hole physics, galaxies: individual: Cartwheel, galaxies: starburst, X-rays: binaries, X-rays: galaxies, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Extragalactic Astrophysics},
+         year = 2009,
+        month = may,
+       volume = {395},
+       number = {1},
+        pages = {L71-L75},
+          doi = {10.1111/j.1745-3933.2009.00645.x},
+archivePrefix = {arXiv},
+       eprint = {0902.3540},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009MNRAS.395L..71M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{LimongiChieffi:2018,
+       author = {{Limongi}, Marco and {Chieffi}, Alessandro},
+        title = "{Presupernova Evolution and Explosive Nucleosynthesis of Rotating Massive Stars in the Metallicity Range -3 {\ensuremath{\leq}} [Fe/H] {\ensuremath{\leq}} 0}",
+      journal = {\apjs},
+     keywords = {stars: evolution, stars: interiors, stars: massive, stars: rotation, supernovae: general, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2018,
+        month = jul,
+       volume = {237},
+       number = {1},
+          eid = {13},
+        pages = {13},
+          doi = {10.3847/1538-4365/aacb24},
+archivePrefix = {arXiv},
+       eprint = {1805.09640},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJS..237...13L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
