A couple more refs

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20478,7 +20478,7 @@ booktitle = {Compact stellar X-ray sources},
    author = {{Szecsi}, D.},
     title = "{Single and binary stellar progenitors of long-duration gamma-ray bursts}",
  keywords = {gamma-ray burst, binary star, progenitor, massive star},
-booktitle = {Proceedings of the XII Multifrequency Behaviour of High Energy Cosmic Sources Workshop. 12-17 June, 2017 Palermo, Italy (MULTIF2017) Online at <A href=``https://pos.sissa.it/cgi-bin/reader/conf.cgi?confid=306''>https://pos.sissa.it/cgi-bin/reader/conf.cgi?confid=306</A>, id.65},
+booktitle = {Proceedings of the XII Multifrequency Behaviour of High Energy Cosmic Sources Workshop. 12-17 June, 2017 Palermo, Italy (MULTIF2017)},
      year = 2017,
 archivePrefix = "arXiv",
    eprint = {1710.05655},
@@ -31327,3 +31327,53 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Belczynski:2021spin,
+       author = {{Belczynski}, K. and {Done}, C. and {Lasota}, J. -P.},
+        title = "{All Apples: Comparing black holes in X-ray binaries and gravitational-wave sources}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = nov,
+          eid = {arXiv:2111.09401},
+        pages = {arXiv:2111.09401},
+archivePrefix = {arXiv},
+       eprint = {2111.09401},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211109401B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Belczynski:2020massgap,
+       author = {{Belczynski}, Krzysztof},
+        title = "{The Most Ordinary Formation of the Most Unusual Double Black Hole Merger}",
+      journal = {\apjl},
+     keywords = {Black hole physics, Stellar evolution, Stellar remnants, 159, 1599, 1627, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2020,
+        month = dec,
+       volume = {905},
+       number = {2},
+          eid = {L15},
+        pages = {L15},
+          doi = {10.3847/2041-8213/abcbf1},
+archivePrefix = {arXiv},
+       eprint = {2009.13526},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...905L..15B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Anagnostou:2020,
+       author = {{Anagnostou}, Oliver and {Trenti}, Michele and {Melatos}, Andrew},
+        title = "{Hierarchical Formation Of An Intermediate Mass Black Hole Via Seven Mergers: Implications For GW190521}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2020,
+        month = oct,
+          eid = {arXiv:2010.06161},
+        pages = {arXiv:2010.06161},
+archivePrefix = {arXiv},
+       eprint = {2010.06161},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv201006161A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
