--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -411,7 +411,7 @@ Dynamical formation in globular clusters can also lead to a range of masses, but
  
 Chemically homogeneous evolution can only produce massive binaries, with total black-hole mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
 
-One challenge for all of these channels is explaining merging components above $\sim 50\, M_\odot$.  Models suggest that black holes in this mass range should not exist, as their progenitors would lose mass through pulsations or explode completely in pair-instability supernovae, driven by a sudden drop in the radiation pressure support as high-energy photons spontaneously produce electron-positron pairs  \citep[e.g.,][]{Woosley:2017,Farmer:2019}.  While early gravitational-wave observations appeared consistent with a maximum component mass and perhaps even an excess of $\approx 30$--$40 M_\odot$ black holes due to pulsational pair-instability supernovae \citep[e.g.,][]{Stevenson:2019}, this is no longer the case with systems like GW190521, whose components fall into the anticipated pair-instability mass gap.  Possible explanations \citep{GW190521:astro} include multiple generations of black hole mergers in clusters \citep{Rodriguez:2019} or additional growth through accretion, particularly in an active galactic nucleus gas disk.
+One challenge for all of these channels is explaining merging components above $\sim 50\, M_\odot$.  Models suggest that black holes in this mass range should not exist, as their progenitors would lose mass through pulsations or explode completely in pair-instability supernovae, driven by a sudden drop in the radiation pressure support as high-energy photons spontaneously produce electron-positron pairs  \citep[e.g.,][]{Woosley:2017,Farmer:2019}.  While early gravitational-wave observations appeared consistent with a maximum component mass and perhaps even an excess of $\approx 30$--$40 M_\odot$ black holes due to pulsational pair-instability supernovae \citep[e.g.,][]{Stevenson:2019}, this is no longer the case with systems like GW190521, whose components fall into the anticipated pair-instability mass gap.  Possible explanations \citep{GW190521:astro} include multiple generations of black hole mergers in clusters \citep[e.g.,][]{Rodriguez:2019,Anagnostou:2020}, additional growth through accretion, particularly in an active galactic nucleus gas disk \citep[e.g.,][]{GerosaFishbach:2021,Tagawa:2021}, or a reassessment of the location of the pair-instability mass gap \citep{Belczynski:2020massgap}.
 
 Very asymmetric binaries, particularly GW190814, present another challenge for most evolutionary channels \citep{Zevin:2020,Mandel:2020}; one recently proposed scenario relies on the possibility that some massive progenitors may leave light remnants behind, particularly if their explosibility is enhanced by a change in compactness due to previous episodes of mass transfer \citep{Antoniadis:2021}.  
 
