--- a/Mandel.bib
+++ b/Mandel.bib
@@ -29226,14 +29226,23 @@ archivePrefix = {arXiv},
 
 @MISC{ZenodoReview:2021,
        author = {{Broekgaarden}, F.~S. and {Mandel}, I.},
-        title = "{Dataset from: Rates of Compact Object Coalescence}",
-     keywords = {Merger rates,  Compact object coalescence, BHBH, NSBH, NSNS, gravitational waves, double compact object},
-         year = 2021,
-        month = jul,
-          eid = {10.5281/zenodo.5232245},
-          doi = {10.5281/zenodo.5232245},
-      version = {v3},
-    publisher = {Zenodo},
+  title        = {{Data set from: Rates of Compact Object 
+                   Coalescences}},
+  month        = nov,
+  year         = 2021,
+  note         = {{Version 4 has additional rates from recent papers 
+                   and is updated to include the GWTC-3 results
+                   11/19/21. This is the version that was used for
+                   the re-submitted paper. Version 3 has additional
+                   rates that we added after receiving useful
+                   feedback from the community (post ArXiv
+                   submission). Version 2 has updated and additional
+                   rates that we added. Version 1 of the data that was
+                   used for the first ArXiv submission.}},
+  publisher    = {Zenodo},
+  version      = 4,
+  doi          = {10.5281/zenodo.5715714},
+  url          = {https://doi.org/10.5281/zenodo.5715714}
 }
 
 @ARTICLE{deKool:1990,
@@ -31375,5 +31384,23 @@ archivePrefix = {arXiv},
        eprint = {2010.06161},
  primaryClass = {astro-ph.HE},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv201006161A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Mandhai:2018,
+       author = {{Mandhai}, Soheb and {Tanvir}, Nial and {Lamb}, Gavin and {Levan}, Andrew and {Tsang}, David},
+        title = "{The Rate of Short-Duration Gamma-Ray Bursts in the Local Universe}",
+      journal = {Galaxies},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2018,
+        month = nov,
+       volume = {6},
+       number = {4},
+        pages = {130},
+          doi = {10.3390/galaxies6040130},
+archivePrefix = {arXiv},
+       eprint = {1812.00507},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018Galax...6..130M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
