--- a/Mandel.bib
+++ b/Mandel.bib
@@ -31411,3 +31411,33 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211110953W},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Klencki:2021,
+       author = {{Klencki}, Jakub and {Istrate}, Alina G. and {Nelemans}, Gijs and {Pols}, Onno},
+        title = "{Partial-envelope stripping and nuclear-timescale mass transfer from evolved supergiants at low metallicity}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2021,
+        month = nov,
+archivePrefix = {arXiv},
+       eprint = {2111.10271},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211110271K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Wagg:2021,
+       author = {{Wagg}, Tom and {Broekgaarden}, Floor S. and {de Mink}, Selma E. and {van Son}, Lieke A.~C. and {Frankel}, Neige and {Justham}, Stephen},
+        title = "{Gravitational wave sources in our Galactic backyard: Predictions for BHBH, BHNS and NSNS binaries detectable with LISA}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2021,
+        month = nov,
+          eid = {arXiv:2111.13704},
+        pages = {arXiv:2111.13704},
+archivePrefix = {arXiv},
+       eprint = {2111.13704},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211113704W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
