--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -502,11 +502,13 @@ The future of gravitational-wave astronomy holds the thrilling prospect of addre
 
 
 \section*{Acknowledgements}
-We would like to thank Christopher Berry, Cole Miller, Fred Rasio, Dorottya Sz\'{e}csi, Thomas Tauris, and Vicky Kalogera for comments that significantly improved this manuscript, and Lev Yungelson and Ed van den Heuvel for providing a historical perspective.
+We would like to thank Christopher Berry, Cole Miller, Fred Rasio, Dorottya Sz\'{e}csi, Thomas Tauris, and Vicky Kalogera for comments that significantly improved this manuscript, and Lev Yungelson and Ed van den Heuvel for providing a historical perspective.  
 
 IM is grateful to all members of Team COMPAS.  Special thanks go to Will Farr, Stephen Justham, Vicky Kalogera, Gijs Nelemans, Philipp Podsiadlowski, and especially Selma de Mink for stimulating discussions spanning many years.  Parts of this research were supported by the Australian Research Council Centre of Excellence for Gravitational Wave Discovery (OzGrav), through project number CE170100004.  IM is a recipient of the Australian Research Council Future Fellowship FT190100574.
 
 AF is grateful for the astro-tourism.
+
+Simulations in this paper made use of the COMPAS rapid binary population synthesis code (version 02.26.00), which is freely available at \url{http://github.com/TeamCOMPAS/COMPAS}.
 
 %\section*{References}
 %\bibliographystyle{hapj}
