--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -177,7 +177,7 @@ Most observed merging binary black holes are consistent with having equal-mass c
 
 \textbf{Distances and Sky Locations:} All of the observed binary black hole signals came from median redshifts between $z\sim 0.05$ and $z \sim 0.9$ (distances of around 250 Mpc to 6 Gpc), consistent with the detector sensitivity during the first three observing runs of advanced LIGO \citep{GWTC3}.  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170814 reduced the sky region to only 60 deg$^2$ \citep{GW170814}.   The best-localised binary black hole mergers have 90\% credible sky localisations of only $\approx 20$ deg$^2$ \citep{GWTC2}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
 
-\textbf{Eccentricity:}  GW190521 appears to have residual eccentricity of at least 0.1 at the gravitational-wave frequency of 10 Hz \citep{RomeroShaw:2020GW190521}.  One or more other binary black hole mergers may also signs of non-negligible eccentricity \citep{RomeroShaw:2021}.  However, there is a possible degeneracy between eccentricity and precession \citep{Bustillo:2021}, and analyses generally do not include both effects, so eccentricity observations do not appear conclusive at this time.
+\textbf{Eccentricity:}  GW190521 appears to have residual eccentricity of at least 0.1 at the gravitational-wave frequency of 10 Hz \citep{RomeroShaw:2020GW190521}.  One or more other binary black hole mergers may also show signs of non-negligible eccentricity \citep{RomeroShaw:2021}.  However, there is a possible degeneracy between eccentricity and precession \citep{Bustillo:2021}, and analyses generally do not include both effects, so eccentricity observations do not appear conclusive at this time.
 
 \textbf{Testing General Relativity:} All gravitational-wave signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR,GWTC2:GR}.
 
@@ -204,7 +204,7 @@ We first focus on X-ray binaries, the type of binary system with the closest con
 Black-hole X-ray binaries consist of a star transferring mass onto a black-hole companion, leading to the emission of X-ray radiation from the accretion disk surrounding the black hole.  X-ray binaries containing accreting black holes can be divided into two categories, low-mass and high-mass, in reference to the mass of the black hole's companion star. The accretion process differs between the two types: in low-mass X-ray binaries, the tidal gravitational pull of the black hole causes mass to stream from the companion onto the black hole in the process known as Roche-lobe overflow, while in high-mass X-ray binaries, the black hole accretes only a fraction of the material (stellar wind) driven off the companion's surface.
 
 \textbf{Black-Hole Masses:} 
-Until recently, black-hole X-ray binaries with dynamical mass measurements provided the only secure measurements of black-hole masses other than the gravitational-wave observations described above, though this is now changing thanks to observations of detached binaries and microlensing data (see section \ref{sec:lensing}).  \citet{Ozel:2010} and \citet{Farr:2011} summarise the mass distribution of black-hole X-ray binaries.  They find a distribution which ranges from $> 20\, M_\odot$ for the heaviest high-mass X-ray binaries to 4 or 5 solar masses for the lightest low-mass X-ray binaries, with a possible mass gap between neutron-star and black-hole masses, though see \cite{Kreidberg:2012} for possible biases in mass measurements of some low-mass X-ray binaries and section \ref{sec:lensing} for evolutionary selection effects.  The uncertainty regarding the radial velocity measurements in high-mass X-ray binaries with Wolf-Rayet companions such as IC10 X-1 and NGC 300 X-1 \citep{Laycock:2015} mean that the most massive confirmed stellar-mass black hole is Cygnus X-1, with a dynamical mass measurement of $21 \pm 2\, M_\odot$ \citep{MillerJones:2021}.   The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting evidence for intermediate-mass black holes \citep{MillerColbert:2004,Greene:2019,Paynter:2021}; if few-hundred solar-mass black holes generically exist in globular clusters, they will substitute into merging binaries and ultimately be observable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008,IMBBH:O1}.
+Until recently, black-hole X-ray binaries with dynamical mass measurements provided the only secure measurements of black-hole masses other than the gravitational-wave observations described above, though this is now changing thanks to observations of detached binaries and microlensing data (see section \ref{sec:lensing}).  \citet{Ozel:2010} and \citet{Farr:2011} summarise the mass distribution of black-hole X-ray binaries.  They find a distribution which ranges from $> 20\, M_\odot$ for the heaviest high-mass X-ray binaries to 4 or 5 solar masses for the lightest low-mass X-ray binaries, with a possible mass gap between neutron-star and black-hole masses, though see \cite{Kreidberg:2012} for possible biases in mass measurements of some low-mass X-ray binaries and section \ref{sec:lensing} for evolutionary selection effects.  The uncertainty regarding the radial velocity measurements in high-mass X-ray binaries with Wolf-Rayet companions such as IC10 X-1 and NGC 300 X-1 \citep{Laycock:2015} means that the most massive confirmed stellar-mass black hole is Cygnus X-1, with a dynamical mass measurement of $21 \pm 2\, M_\odot$ \citep{MillerJones:2021}.   The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting evidence for intermediate-mass black holes \citep{MillerColbert:2004,Greene:2019,Paynter:2021}; if few-hundred solar-mass black holes generically exist in globular clusters, they will substitute into merging binaries and ultimately be observable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008,IMBBH:O1}.
 
 \textbf{Black-Hole Spin Magnitudes:} Black-hole X-ray binaries also provide an opportunity for measuring black-hole spins \citep[see][for recent reviews]{MillerMiller:2015,Reynolds:2020}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black-hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics \citep[e.g.,][]{Basak:2017,Kawano:2017}.  
 
@@ -215,7 +215,7 @@ All three high-mass X-ray binaries with available spin measurements -- Cygnus X-
 
 \subsubsection{Other electromagnetic black hole mass measurements} \label{sec:lensing}
 
-\textbf{Detached binaries:} Until recently, only X-ray binaries allowed accurate mass measurements of stellar-mass black holes.  However, this has recently changed with observations of wide binaries with a luminous companion detached from a non-accreting black hole.  Examples of such observations include two $\sim 3\, M_\odot$ black holes in detached binaries \citep{Thompson:2019,Jayasinghe:2021} along with several black holes in detached binaries in globular clusters \citep{Giesers:2019,Saracino:2021}.  Surveys like Gaia may detect hundreds of detached black hole binaries \citep[e.g.,][]{Chawla:2021}.  However, the case of LB-1, which was initially thought to contain an extremely massive black hole in a wide binary, highlights some of the challenges of accurately measuring black hole masses in detached systems \citep{Liu:2019,Eldridge:2020,AbdulMassih:2020,Shenar:2020}.   
+\textbf{Detached binaries:} Until recently, only stellar-mass black holes in X-ray binaries allowed accurate dynamical mass measurements.  However, this has recently changed with observations of wide binaries with a luminous companion detached from a non-accreting black hole.  Examples of such observations include two $\sim 3\, M_\odot$ black holes in detached binaries \citep{Thompson:2019,Jayasinghe:2021} along with several black holes in detached binaries in globular clusters \citep{Giesers:2019,Saracino:2021}.  Surveys like Gaia may detect hundreds of detached black hole binaries \citep[e.g.,][]{Chawla:2021}.  However, the case of LB-1, which was initially thought to contain an extremely massive black hole in a wide binary, highlights some of the challenges of accurately measuring black hole masses in detached systems \citep{Liu:2019,Eldridge:2020,AbdulMassih:2020,Shenar:2020}.   
 
 \textbf{Microlensing:} Microlensing observations provide a tool for measuring the masses of single black holes.  When such black holes pass between a luminous star and the observer, they temporarily lens the star, increasing its luminosity while the alignment is roughly within the lens's Einstein ring.  Mircolensing measurements, together with gravitational-wave and detached black-hole binary observations, suggest that there is no evidence for a mass gap between neutron stars and black holes \citep{WyrzykowskiMandel:2019, Mroz:2021}.  However, there is a possible degeneracy between lower lens masses and higher lens-source relative velocities, since both reduce the transient duration; thus, the low-mass microlensing black-hole candidates could be consistent with higher-mass black holes receiving natal kicks of $\gtrsim 80$ km s$^{-1}$.
 
@@ -254,9 +254,9 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 The proposed formation scenarios for merging compact-object binaries generally fall into two broad categories: the evolution of isolated binaries composed of two massive stars and binaries which form or merge with the assistance of gravitational dynamical interactions.  Below, we discuss four examples of these scenarios: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; (iii) assembly of a close binary from black holes that formed from stars not born in the same binary; and (iv) stellar and binary evolution and dynamics operating jointly in triple systems.   Contrived as these scenarios sound, all four might plausibly contribute to the production of binary black hole mergers.  And as we will see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black-hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
 
-We explore these four formation scenarios in more detail below. We will not discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} (\citet{Woosley:2016} and \citet{Dai:2017} discuss the problems with this picture); cosmological coupling \citep{Croker:2021}; or physics beyond the standard model \citep{Sakstein:2020}. 
+We explore these four formation scenarios in more detail below. We will not discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} (\citet{Woosley:2016} and \citet{Dai:2017} discuss the problems with this picture); cosmological coupling \citep{Croker:2021}; or physics beyond the standard model \citep{Sakstein:2020}.   
 
-\textbf{Primordial black holes:}  We focus on black holes of astrophysical origin.   Mergers of primordial black holes formed through the collapse of early-Universe density perturbations have been proposed as sources of gravitational waves \citep{Bird:2016}.   The contribution of primordial black hole mergers to the observed population of gravitational-wave signals is sensitive to the masses of primordial black holes, the total fraction of dark matter they comprise, their initial distribution in binaries or small clusters, and the possibility of gas accretion onto primordial black holes \citep{AliHaimoud:2017, ChenHuang:2018, Korol:2019, DeLuca:2020b, DeLuca:2020a}.
+We limit our discussion to black holes of astrophysical origin.   Mergers of primordial black holes formed through the collapse of early-Universe density perturbations have been proposed as sources of gravitational waves \citep{Bird:2016}.   The contribution of primordial black hole mergers to the observed population of gravitational-wave signals is sensitive to the masses of primordial black holes, the total fraction of dark matter they comprise, their initial distribution in binaries or small clusters, and the possibility of gas accretion onto primordial black holes \citep{AliHaimoud:2017, ChenHuang:2018, Korol:2019, DeLuca:2020b, DeLuca:2020a}.
 
 \subsection{The Candidate Formation Scenarios}
 \subsubsection{Coming closer later in life: classical isolated binary evolution via the common-envelope phase}
@@ -278,7 +278,7 @@ An example of the evolution of this system is sketched out in a van den Heuvel -
 \item[b.] The more massive primary reaches the end of its main sequence evolution first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The associated release of gravitational binding energy and the eventual onset of hydrogen shell burning cause the hydrogen-rich envelope to expand.  For a sufficiently close binary, the primary expands past the equipotential surface known as the Roche Lobe and begins to transfer mass onto the secondary.  This mass transfer proceeds on the thermal timescale of the primary donor and could be significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary, in addition to wind-driven mass loss, can widen the system to perhaps $\sim 20$ AU.  
 \item[c.] The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  
 \item[d.] Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; this collapse may be complete, or there may be some ejected mass and an associated natal kick.  
-\item[e.] When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova (if the fallback is not complete).  The mass transfer on to the black hole would need to be almost wholly non-conservative if the accretion obeys the Eddington limit, which corresponds to an equilibrium between gravity and the pressure of the radiation released during accretion on infalling material.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor as it loses mass.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  
+\item[e.] When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova (if the fallback is not complete).  The mass transfer on to the black hole would need to be almost wholly non-conservative if the accretion obeys the Eddington limit, which corresponds to an equilibrium between gravity and the pressure of the radiation released during accretion on infalling material.  Mass transfer from a massive donor to a lower-mass accretor adds specific angular momentum to the transferred mass, so conservation of angular momentum requires that binary's orbit to shrink.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor as it loses mass.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  
 \item[f.] This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas (from the donor's envelope) around the binary.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  
 \item[g.] After the expulsion of the common envelope, the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  
 \item[h.] Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black-hole binary is formed.  While this entire process takes only a few million years from the formation of a stellar binary to the formation of a binary black hole, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
@@ -419,7 +419,7 @@ Very asymmetric binaries, particularly GW190814, present another challenge for m
 \subsubsection{Mass ratios}
 The mass ratios of most merging black-hole binaries produced through the isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and then dynamically unstable reverse mass transfer.   However, mass ratios exceeding $2:1$ are expected to be more common at low metallicity \citep{Dominik:2012,Stevenson:2017}, and the strict mass ratio constraint may in fact apply to black-hole binaries that only experience stable mass transfer episodes \citep{vanSon:2021}.
 
-Dynamically formed binaries may also favour comparable masses because the heaviest black holes in a cluster are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or a $\gtrsim 100 M_\odot$ intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
+Dynamically formed binaries may also favour comparable masses because the heaviest black holes in a cluster are most likely to merge with each other.  However, more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or a $\gtrsim 100 M_\odot$ intermediate-mass black hole that merges with lower-mass black holes \citep{Mandel:2008,Belczynski:2014VMS}. 
 
 Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016} and \citet{Riley:2020} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in section \ref{form:CHE}. 
 
